[package]
name = "ethercat"
version = "0.1.0"
authors = ["Philip Conrad <philipaconrad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"

[dependencies.pnet]
version = "0.26.0"

[dependencies.pico-args]
version = "0.3.2"
