[package]
name = "ethercat"
version = "0.1.0"
authors = ["Philip Conrad <conrap@chariot-chaser.net>"]
edition = "2018"
homepage = "https://github.com/philipaconrad/ethercat"
repository = "https://github.com/philipaconrad/ethercat"
license = "BSD-3-Clause"
license-file = "LICENSE.txt"
readme = "README.md"
description = "A networking utility for reading and writing to raw ethernet sockets."
keywords = ["networking", "ethernet", "sockets", "command-line-utilities"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pnet]
version = "0.26.0"

[dependencies.pico-args]
version = "0.3.2"

[[bin]]
name = "ethercat"
path = "src/main.rs"
